deploy/aks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: azzu-web-dev
  labels:
    app.kubernetes.io/part-of: azzu
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
