deploy/aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azzu-banking-web
  namespace: azzu-web-dev
  labels:
    app.kubernetes.io/name: azzu-banking-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: azzu-banking-web
  ports:
    - name: http
      port: 80
      targetPort: http
